--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-circular-progress-indicator": "^2.0.6",
+    "react-native-gesture-handler": "^2.3.0",
     "react-native-reanimated": "^2.4.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.2",
